--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 streamlit
-pandas==2.2.0
-numpy==1.26.0
-matplotlib==3.8.0
-seaborn==0.13.0
-plotly==5.18.0
-scikit-learn==1.3.0
-sqlite3==2.6.0
-sqlalchemy==2.0.23
-nltk==3.8.1
-pillow==10.1.0
-anthropic==0.7.0
-langchain==0.1.1
-langchain-anthropic==0.1.1
-python-dotenv==1.0.0
+pandas
+numpy
+matplotlib
+seaborn
+plotly
+scikit-learn
+sqlite3
+sqlalchemy
+nltk
+pillow
+langchain==0.1.16
+langchain-community>=0.0.32
+langchain-core>=0.1.0
+langchain-experimental
+langchain-anthropic
+python-dotenv
